Configure Firebase integration and update application ID for Todo app

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,20 @@ allprojects {
     }
 }
 
+buildscript {
+    // ...
+    repositories {
+        google()
+        mavenCentral()
+    }
+    
+    dependencies {
+        // ...
+
+        classpath 'com.google.gms:google-services:4.3.13'  // Google Services plugin
+    }
+}
+
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
