--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,15 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'  
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file("local.properties")
@@ -35,9 +41,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.latihan4_todolist"
+        applicationId = "com.todolist.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        minSdkVersion flutter.minSdkVersion
+        multiDexEnabled true
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
@@ -56,3 +64,5 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {}
