--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path: ^1.8.3
   path_provider: ^2.0.11
+  firebase_core: ^2.22.0
 
 dev_dependencies:
   flutter_test:
